# ustar

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  lib.rs
src/common/: meta.md  meta.rs  mod.rs  read.rs
test/: file_1.txt  file_4.txt  files_append_test.tar  files_test.tar
test/file_3_dir/: file_3.txt
